fix: style version mobile in Modal and Navbar

--- a/fancy-movies2/src/components/MainInput/index.module.scss
+++ b/fancy-movies2/src/components/MainInput/index.module.scss
@@ -88,3 +88,9 @@
     }
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .MainInput {
+    left: calc(40% - -28px);
+  }
+}
