--- a/fancy-movies2/src/components/Navbar/index.module.scss
+++ b/fancy-movies2/src/components/Navbar/index.module.scss
@@ -67,3 +67,11 @@
     }
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .Navbar {
+    .listNav {
+      display: none;
+    }
+  }
+}
